engine/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      name: engine
      labels:
        app: engine
        version: v1
    spec:
      containers:
        - name: engine
          image: ntunghoi/engine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9081
---
apiVersion: v1
kind: Service
metadata:
  name: engine
  labels:
    app: engine
spec:
  ports:
    - port: 8080
      targetPort: 9081
      name: http
  selector:
    app: engine
